--- a/interfaces/build.gradle
+++ b/interfaces/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "x7c1.linen"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
