--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -10,7 +10,10 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        multiDexEnabled true
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -21,5 +24,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+//    compile project(':interfaces')
     compile 'com.android.support:appcompat-v7:23.1.0'
 }
