--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -25,6 +25,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':pickle')
+    compile project(':interfaces')
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:multidex:1.0.0'
 }
