--- a/pickle/build.gradle
+++ b/pickle/build.gradle
@@ -10,5 +10,5 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs-generated', include: ['*.jar'])
 }
