--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -15,7 +15,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs-generated', include: ['*.jar'])
     compile project(':pickle')
     compile project(':interfaces')
     compile 'com.android.support:appcompat-v7:23.1.0'
