extract subproject independent from linen-glue

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':linen-starter', ':linen-glue', ':linen-pickle'
+include ':linen-starter', ':linen-glue', ':linen-pickle', ':wheat-ancient'
