--- a/wheat-ancient/build.gradle
+++ b/wheat-ancient/build.gradle
@@ -1,6 +1,15 @@
 apply plugin: 'com.android.library'
 
 android {
+    compileSdkVersion 23
+    buildToolsVersion "21.1.2"
+
+    defaultConfig {
+        minSdkVersion 19
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -11,6 +20,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':wheat-ancient')
+    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
 }
