--- a/linen-starter/build.gradle
+++ b/linen-starter/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile project(':linen-pickle')
     compile project(':linen-glue')
     compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.android.support:multidex:1.0.1'
 }
