--- a/linen-starter/build.gradle
+++ b/linen-starter/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile "com.android.support:cardview-v7:23.1.1"
     compile 'com.android.support:multidex:1.0.1'
 }
