--- a/linen-starter/src/main/AndroidManifest.xml
+++ b/linen-starter/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:name="android.support.multidex.MultiDexApplication"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme.Polyfill" >
 
         <activity
             android:name=".MainActivity"
