--- a/linen-starter/build.gradle
+++ b/linen-starter/build.gradle
@@ -17,7 +17,10 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                    'proguard-rules.pro',
+                    'proguard-support-library.txt'
+
             signingConfig signingConfigs.release
         }
     }
