add activity to create dummies

--- a/linen-starter/src/main/AndroidManifest.xml
+++ b/linen-starter/src/main/AndroidManifest.xml
@@ -24,5 +24,10 @@
             android:label="setting of channels">
         </activity>
 
+        <activity
+            android:name=".dev.CreateDummiesActivity"
+            android:label="create dummies">
+        </activity>
+
     </application>
 </manifest>
