add example to call service

--- a/linen-starter/src/main/AndroidManifest.xml
+++ b/linen-starter/src/main/AndroidManifest.xml
@@ -29,5 +29,10 @@
             android:label="create dummies">
         </activity>
 
+        <service
+            android:name=".UpdaterService"
+            android:exported="false"
+            />
+
     </application>
 </manifest>
