add call to activity of sources setting

--- a/linen-starter/src/main/AndroidManifest.xml
+++ b/linen-starter/src/main/AndroidManifest.xml
@@ -21,7 +21,12 @@
 
         <activity
             android:name=".SettingChannelsActivity"
-            android:label="setting of channels">
+            >
+        </activity>
+
+        <activity
+            android:name=".SettingChannelSourcesActivity"
+            >
         </activity>
 
         <activity
