--- a/linen-starter/src/main/AndroidManifest.xml
+++ b/linen-starter/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         </activity>
 
         <activity android:name=".settings.PresetChannelsActivity" />
+        <activity android:name=".settings.PresetChannelSourcesActivity" />
 
         <activity
             android:name=".dev.CreateRecordsActivity"
