fix crash in build
java.lang.OutOfMemoryError: GC overhead limit exceeded

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,13 @@ subprojects{
                     targetSdkVersion 23
                     multiDexEnabled true
                 }
+                dexOptions {
+                    /*
+                    preDexLibraries = false
+                    incremental true
+                    */
+                    javaMaxHeapSize "4g"
+                }
             }
         }
     }
