--- a/linen-starter/src/main/AndroidManifest.xml
+++ b/linen-starter/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
         <activity android:name=".settings.PresetChannelsActivity" />
         <activity android:name=".settings.PresetChannelSourcesActivity" />
-        <activity android:name=".settings.SettingUpdaterActivity" />
+        <activity android:name=".settings.LoaderSchedulesActivity" />
 
         <activity
             android:name=".dev.CreateRecordsActivity"
