--- a/linen-starter/build.gradle
+++ b/linen-starter/build.gradle
@@ -24,6 +24,9 @@ android {
 
             signingConfig signingConfigs.release
         }
+        debug {
+            debuggable true
+        }
     }
 }
 
@@ -31,9 +34,9 @@ dependencies {
     compile fileTree(dir: 'libs-generated', include: ['*.jar'])
     compile project(':linen-pickle')
     compile project(':linen-glue')
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:recyclerview-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:multidex:1.0.1'
 }
